# trading_diary

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh  linters.sh
src/admintools/: apps.py
src/admintools/models/: __init__.py  models.py
src/settings/: settings.py  urls.py
src/strategies/: admin.py
src/strategies/migrations/: 0001_initial.py  0002_alter_tradingtool_description.py
src/strategies/models/: __init__.py  models.py
src/trades/: admin.py
src/trades/migrations/: 0001_initial.py  0002_alter_trade_result_amount.py  0003_alter_asset_options.py
src/trades/models/: __init__.py  models.py
src/users/: admin.py
src/users/migrations/: 0001_initial.py
src/users/models/: manager.py  models.py
